--- a/css/services-cta.css
+++ b/css/services-cta.css
@@ -80,7 +80,7 @@
     text-decoration: none;
     padding: 18px 35px;
     border-radius: 50px;
-    font-family: 'Articulat CF Medium', sans-serif;
+    font-family: 'Montserrat Medium', sans-serif;
     font-size: 18px;
     font-weight: 600;
     letter-spacing: 1.5px;
